syntax = "proto3";

import "google/protobuf/struct.proto";

option go_package="rpc/";

message InfoFileRequest {
  string type = 1;
  string version=2;
  string hash=3;
}

message InfoFileResponse{
  string type = 1;
  string version=2;
  string hash=3;
  google.protobuf.Struct content=4;
}

service InfoFileService{
  rpc LoadFile(InfoFileRequest) returns (InfoFileResponse){};
}
